--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.jets.mad.itischeduleapp.Test.TestActivtiy"
-    tools:showIn="@layout/activity_test_activtiy">
+    tools:context="com.jets.mad.itischeduleapp.UI.Activity.LoginActivity">
 
 </android.support.constraint.ConstraintLayout>
