--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.jets.mad.itischeduleapp.UI.Activity.HomeActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="home" />
 </android.support.constraint.ConstraintLayout>
