--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -2,13 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jets.mad.itischeduleapp.UI.Fragment.DayFragment"
-    android:background="@color/colorAccent">
+    tools:context="com.jets.mad.itischeduleapp.UI.Fragment.DayFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_margin="20dp"
+        android:id="@+id/day_list"/>
 </FrameLayout>
