--- a/app/src/main/res/layout/custom_cell.xml
+++ b/app/src/main/res/layout/custom_cell.xml
@@ -24,5 +24,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:text="" />
+    <TextView
+        android:id="@+id/textView545"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"
+        android:text="" />
 </LinearLayout>
