--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -4,10 +4,27 @@
     android:layout_height="match_parent"
     tools:context="com.jets.mad.itischeduleapp.UI.Fragment.DayFragment">
 
-
-    <android.support.v7.widget.RecyclerView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
-        android:id="@+id/day_list"/>
+        android:orientation="vertical"
+        android:weightSum="3">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:id="@+id/day_list_marker"
+            android:orientation="horizontal"
+            android:divider="@null"
+            android:layout_weight="0.1"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="20dp"
+            android:id="@+id/day_list"
+            android:layout_weight="2.5"/>
+    </LinearLayout>
+
 </FrameLayout>
