--- a/app/src/main/res/layout/cell_day_marker.xml
+++ b/app/src/main/res/layout/cell_day_marker.xml
@@ -2,8 +2,7 @@
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/day_marker"
-    android:layout_width="100dp"
-    android:layout_height="match_parent"
+    android:layout_width="70dp"
+    android:layout_height="wrap_content"
     android:gravity="center"
-    android:text="1"
-    android:elevation="3dp"/>
+    android:text="1" />
