--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,30 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="8"
-    android:clickable="false"
-    android:focusable="false"
-    android:focusableInTouchMode="false"
     android:orientation="vertical"
     tools:context="com.jets.mad.itischeduleapp.UI.Activity.HomeActivity">
+    <!--android:weightSum="8"-->
+    <!--android:clickable="false"-->
+    <!--android:focusable="false"-->
+    <!--android:focusableInTouchMode="false"-->
+
 
 
     <fragment
         android:id="@+id/month"
-        android:name="com.jets.mad.itischeduleapp.UI.Fragment.MonthFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="5"
-        android:clickable="true"
-        android:focusableInTouchMode="true"
-        android:focusable="true"
-        android:id="@+id/draggable">
+        android:name="com.jets.mad.itischeduleapp.UI.Fragment.DayFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="3"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_alignParentTop="true" />-->
+    <!--&lt;!&ndash;<RelativeLayout&ndash;&gt;-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="5"-->
+        <!--android:clickable="true"-->
+        <!--android:focusableInTouchMode="true"-->
+        <!--android:focusable="true"-->
+        <!--android:id="@+id/draggable">-->
 
-    </RelativeLayout>
+    <!--</RelativeLayout>-->
 </LinearLayout>
