--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,22 +12,24 @@
     tools:context="com.jets.mad.itischeduleapp.UI.Activity.HomeActivity">
 
 
-    <fragment
-        android:id="@+id/month"
-        android:name="com.jets.mad.itischeduleapp.UI.Fragment.MonthFragment"
+    <LinearLayout
+        android:id="@+id/lout"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="6"
+        android:orientation="horizontal"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
-    <RelativeLayout
+        android:layout_alignParentTop="true" >
+
+    </LinearLayout>
+    <View
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="5"
+        android:layout_weight="2"
         android:clickable="true"
         android:focusableInTouchMode="true"
         android:focusable="true"
         android:id="@+id/draggable">
 
-    </RelativeLayout>
+    </View>
 </LinearLayout>
