--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,75 +1,69 @@
- <android.support.constraint.ConstraintLayout
+ <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
-     <ImageView
-         android:id="@+id/imageView3"
-         android:layout_width="123dp"
-         android:layout_height="100dp"
-         android:elevation="10dp"
-         app:srcCompat="@mipmap/ic_launcher_round"
-         app:layout_constraintTop_toTopOf="parent"
-         android:layout_marginTop="111dp"
-         android:layout_marginRight="130dp"
-         app:layout_constraintRight_toRightOf="parent"
-         android:layout_marginEnd="130dp" />
-
      <LinearLayout
-         android:layout_width="0dp"
-         android:layout_height="0dp"
-         android:layout_marginLeft="8dp"
-         android:layout_marginRight="8dp"
-         android:layout_marginTop="8dp"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:paddingLeft="15dp"
+         android:paddingRight="15dp"
+         android:layout_marginTop="30dp"
          android:orientation="vertical"
          android:weightSum="3"
-         app:layout_constraintHorizontal_bias="0.501"
-         app:layout_constraintLeft_toLeftOf="parent"
-         app:layout_constraintRight_toRightOf="parent"
-         app:layout_constraintTop_toTopOf="parent"
-         android:layout_marginStart="8dp"
-         android:layout_marginEnd="8dp"
-         app:layout_constraintBottom_toBottomOf="parent"
-         android:layout_marginBottom="8dp">
+         android:id="@+id/linearLayout"
+         android:layout_alignParentEnd="true">
+
+         <!--<android.support.v7.widget.CardView-->
+             <!--android:id="@+id/cardView"-->
+             <!--android:layout_width="match_parent"-->
+             <!--android:layout_height="wrap_content"-->
+             <!--android:layout_weight="0.94">-->
+
+             <TextView
+                 android:id="@+id/textView5"
+                 android:layout_width="match_parent"
+                 android:layout_height="39dp"
+                 android:textAlignment="center"
+                 android:layout_gravity="bottom|center"
+                 android:text="Toqa Abdel-Kadeeeeeeer"
+                 android:layout_weight="0.94"
+                 android:textSize="30sp" />
+         <!--</android.support.v7.widget.CardView>-->
 
          <android.support.v7.widget.CardView
              android:id="@+id/cardView"
              android:layout_width="match_parent"
              android:layout_height="0dp"
-             android:layout_weight="0.8"
-             android:layout_margin="18dp">
+             android:layout_weight="2">
 
-             <TextView
-                 android:id="@+id/textView5"
-                 android:layout_width="wrap_content"
+             <android.support.design.widget.TabLayout
+                 android:id="@+id/sliding_tabs"
+                 android:layout_width="match_parent"
                  android:layout_height="wrap_content"
-                 android:layout_gravity="center"
-                 android:text="Toqa Eid"
-                 android:textSize="22sp"/>
+                 app:tabMode="fixed" />
+
+             <android.support.v4.view.ViewPager
+                 android:id="@+id/profile_pager"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:padding="20dp" />
 
          </android.support.v7.widget.CardView>
 
-         <android.support.design.widget.TabLayout
-             android:id="@+id/sliding_tabs"
-             android:layout_width="match_parent"
-             android:layout_height="0dp"
-             android:layout_marginTop="10dp"
-             android:layout_weight="0.3"
-             app:tabMode="fixed" />
-
-         <android.support.v4.view.ViewPager
-             android:id="@+id/profile_pager"
-             android:layout_width="match_parent"
-             android:layout_height="0dp"
-             android:layout_weight="1.9"
-             tools:layout_editor_absoluteY="0dp"
-             tools:layout_editor_absoluteX="0dp" />
-
-
      </LinearLayout>
 
+     <ImageView
+         android:id="@+id/imageView3"
+         android:layout_width="200dp"
+         android:layout_height="120dp"
+         android:elevation="10dp"
+         app:srcCompat="@mipmap/ic_launcher_round"
+         android:layout_marginTop="36dp"
+         android:layout_alignTop="@+id/linearLayout"
+         android:layout_centerHorizontal="true" />
 
- </android.support.constraint.ConstraintLayout>
+
+ </RelativeLayout>
