--- a/app/src/main/res/layout/fragment_profile_data.xml
+++ b/app/src/main/res/layout/fragment_profile_data.xml
@@ -1,69 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="50dp">
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="84dp"
         android:layout_height="35dp"
         android:text="Address"
-        android:layout_marginLeft="58dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="41dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/textView7"
+        android:layout_alignStart="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="87dp"
         android:layout_height="38dp"
         android:text="Fullname"
-        android:layout_marginLeft="58dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="51dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/textView10" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="205dp"
         android:layout_height="40dp"
         android:text="Toqa Eid Sobhy Abdel-Kader"
-        app:layout_constraintLeft_toRightOf="@+id/textView8"
-        android:layout_marginLeft="43dp"
-        android:layout_marginTop="51dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView13"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.714" />
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_alignStart="@+id/textView12" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="201dp"
         android:layout_height="33dp"
         android:text="Obour City"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView9"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginTop="43dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        android:layout_alignBottom="@+id/textView9"
+        android:layout_alignEnd="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="201dp"
         android:layout_height="33dp"
         android:text="01008894627"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView10"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginTop="44dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        android:layout_marginEnd="12dp"
+        android:layout_alignBottom="@+id/textView10"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:id="@+id/textView11"
@@ -71,30 +55,25 @@
         android:layout_height="33dp"
         android:text="toqa.eid@gmail.com"
         android:layout_marginRight="3dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="48dp" />
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/textView13" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="87dp"
         android:layout_height="33dp"
         android:text="Email"
-        android:layout_marginLeft="36dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="48dp"
-        app:layout_constraintRight_toLeftOf="@+id/textView11"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.568" />
+        android:layout_marginTop="32dp"
+        android:layout_below="@+id/textView10"
+        android:layout_alignStart="@+id/textView10" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="81dp"
         android:layout_height="35dp"
         android:text="Phone"
-        android:layout_marginLeft="61dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="44dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_below="@+id/textView11"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="19dp" />
+</RelativeLayout>
