--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,7 +2,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/profile_container">
 
 
      <LinearLayout
@@ -16,31 +17,25 @@
          android:id="@+id/linearLayout"
          android:layout_alignParentEnd="true">
 
-         <!--<android.support.v7.widget.CardView-->
-             <!--android:id="@+id/cardView"-->
-             <!--android:layout_width="match_parent"-->
-             <!--android:layout_height="wrap_content"-->
-             <!--android:layout_weight="0.94">-->
-
              <TextView
-                 android:id="@+id/textView5"
+                 android:id="@+id/profile_name"
                  android:layout_width="match_parent"
-                 android:layout_height="39dp"
+                 android:layout_height="0dp"
                  android:textAlignment="center"
-                 android:layout_gravity="bottom|center"
+                 android:layout_gravity="center|bottom"
                  android:text="Toqa Abdel-Kadeeeeeeer"
-                 android:layout_weight="0.94"
-                 android:textSize="30sp" />
-         <!--</android.support.v7.widget.CardView>-->
+                 android:layout_weight="0.5"
+                 android:layout_marginTop="110dp"
+                 android:textSize="23sp" />
 
          <android.support.v7.widget.CardView
-             android:id="@+id/cardView"
+             android:id="@+id/profile_cardView"
              android:layout_width="match_parent"
              android:layout_height="0dp"
-             android:layout_weight="2">
+             android:layout_weight="2.5">
 
              <android.support.design.widget.TabLayout
-                 android:id="@+id/sliding_tabs"
+                 android:id="@+id/profile_sliding_tabs"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:tabMode="fixed" />
@@ -56,14 +51,24 @@
      </LinearLayout>
 
      <ImageView
-         android:id="@+id/imageView3"
+         android:id="@+id/profile_image"
          android:layout_width="200dp"
          android:layout_height="120dp"
          android:elevation="10dp"
+         android:layout_marginTop="10dp"
          app:srcCompat="@mipmap/ic_launcher_round"
-         android:layout_marginTop="36dp"
-         android:layout_alignTop="@+id/linearLayout"
          android:layout_centerHorizontal="true" />
+
+     <android.support.design.widget.FloatingActionButton
+         android:id="@+id/profile_edit_btn"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentEnd="true"
+         android:layout_alignParentTop="true"
+         android:layout_margin="50dp"
+         android:clickable="true"
+         app:fabSize="mini"
+         app:srcCompat="@android:drawable/ic_menu_edit" />
 
 
  </RelativeLayout>
