--- a/app/src/main/res/layout/fragment_profile_data.xml
+++ b/app/src/main/res/layout/fragment_profile_data.xml
@@ -1,79 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="50dp">
 
     <TextView
-        android:id="@+id/textView9"
-        android:layout_width="84dp"
+        android:id="@+id/email"
+        android:layout_width="87dp"
         android:layout_height="35dp"
-        android:text="Address"
+        android:text="Email"
         android:layout_marginTop="20dp"
-        android:layout_below="@+id/textView7"
-        android:layout_alignStart="@+id/textView6" />
+        android:layout_below="@+id/profile_edit_phone"
+        android:layout_alignStart="@+id/phone" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/firstname"
         android:layout_width="87dp"
         android:layout_height="38dp"
-        android:text="Fullname"
+        android:text="Firstname"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView10" />
+        android:layout_alignStart="@+id/lastname" />
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="205dp"
+        android:id="@+id/profile_edit_phone"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:text="Toqa Eid Sobhy Abdel-Kader"
-        android:layout_alignBaseline="@+id/textView6"
-        android:layout_alignBottom="@+id/textView6"
-        android:layout_alignStart="@+id/textView12" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="201dp"
-        android:layout_height="33dp"
-        android:text="Obour City"
-        android:layout_alignBottom="@+id/textView9"
-        android:layout_alignEnd="@+id/textView7" />
-
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="201dp"
-        android:layout_height="33dp"
         android:text="01008894627"
-        android:layout_marginEnd="12dp"
-        android:layout_alignBottom="@+id/textView10"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignBaseline="@+id/phone"
+        android:layout_alignBottom="@+id/phone"
+        android:layout_alignStart="@+id/profile_edit_lastname" />
 
     <TextView
-        android:id="@+id/textView11"
-        android:layout_width="201dp"
+        android:id="@+id/profile_edit_email"
+        android:layout_width="wrap_content"
         android:layout_height="33dp"
         android:text="toqa.eid@gmail.com"
-        android:layout_marginRight="3dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView13" />
+        android:layout_alignBaseline="@+id/email"
+        android:layout_alignBottom="@+id/email"
+        android:layout_alignStart="@+id/profile_edit_phone"
+        android:layout_alignEnd="@id/profile_edit_email"/>
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/profile_edit_lastname"
+        android:layout_width="wrap_content"
+        android:layout_height="33dp"
+        android:text="Abdel-Kader"
+        android:layout_above="@+id/phone"
+        android:layout_toEndOf="@+id/firstname"/>
+
+    <TextView
+        android:id="@+id/profile_edit_firstname"
+        android:layout_width="wrap_content"
+        android:layout_height="33dp"
+        android:text="Toqa"
+        android:layout_marginRight="3dp"
+        android:layout_toEndOf="@+id/firstname"
+        android:layout_alignParentTop="true" />
+
+    <TextView
+        android:id="@+id/phone"
         android:layout_width="87dp"
         android:layout_height="33dp"
-        android:text="Email"
+        android:text="Phone"
         android:layout_marginTop="32dp"
-        android:layout_below="@+id/textView10"
-        android:layout_alignStart="@+id/textView10" />
+        android:layout_below="@+id/lastname"
+        android:layout_alignStart="@+id/lastname" />
 
     <TextView
-        android:id="@+id/textView10"
-        android:layout_width="81dp"
+        android:id="@+id/lastname"
+        android:layout_width="87dp"
         android:layout_height="35dp"
-        android:text="Phone"
-        android:layout_below="@+id/textView11"
+        android:text="Lastname"
+        android:layout_below="@+id/profile_edit_firstname"
         android:layout_alignParentStart="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="19dp" />
 </RelativeLayout>
+</ScrollView>
+
