--- a/app/src/main/res/layout/cell_day.xml
+++ b/app/src/main/res/layout/cell_day.xml
@@ -23,7 +23,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:padding="10dp">
             <TextView
                 android:id="@+id/day_start_time"
                 android:layout_width="wrap_content"
@@ -49,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1 A.m."
-                android:layout_alignTop="@+id/imageView_end"
+                android:layout_alignBottom="@+id/imageView_end"
                 android:layout_alignStart="@+id/day_start_time" />
 
             <TextView
@@ -57,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="0dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginRight="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
                 android:text="Study Android"
@@ -88,8 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 card_view:srcCompat="@mipmap/ic_access_time_black_24dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginLeft="7dp" />
 
         </RelativeLayout>
 
