--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="3">
+        android:weightSum="3"
+        android:background="@color/caldroid_white">
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
@@ -17,13 +18,13 @@
             android:orientation="horizontal"
             android:divider="@null"
             android:paddingTop="20dp"
-            android:elevation="30dp"
-            android:layout_weight="0.3"/>
+            android:elevation="15dp"
+            android:layout_weight="0.3" />
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="20dp"
+            android:layout_margin="0dp"
             android:id="@+id/day_list"
             android:layout_weight="2.8"/>
     </LinearLayout>
