--- a/app/src/main/res/layout/fragment_day_detail.xml
+++ b/app/src/main/res/layout/fragment_day_detail.xml
@@ -5,12 +5,12 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.jets.mad.itischeduleapp.UI.Fragment.DayDetailFragment"
-    android:background="@android:color/transparent"
-    >
+    android:background="@android:color/transparent">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="196dp"
+        android:textAlignment="center"
         app:cardElevation="10dp">
 
         <RelativeLayout
@@ -50,17 +50,19 @@
                 android:layout_alignTop="@+id/day_details_start_time"
                 android:layout_marginStart="12dp"
                 android:text="9:00 A.M"
-                android:layout_alignEnd="@+id/textView15" />
+                android:layout_alignEnd="@+id/day_details_description" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/day_details_end_time"
                 android:layout_centerHorizontal="true"
-                android:layout_marginLeft="80dp"
+                android:textAlignment="center"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
                 android:layout_marginTop="32dp"
                 android:text="I am going to study intent and services"
-                android:id="@+id/textView15" />
+                android:id="@+id/day_details_description" />
 
         </RelativeLayout>
 
