--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,74 +1,93 @@
- <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/profile_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?attr/colorPrimary">
+
+    <ImageView
+        android:id="@+id/profile_edit_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:clickable="true"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:srcCompat="@android:drawable/ic_menu_edit" />
+
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/profile_edit_btn"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_marginBottom="50dp"-->
+        <!--android:layout_marginLeft="50dp"-->
+        <!--android:clickable="true"-->
+        <!--app:backgroundTint="@color/colorPrimaryDark"-->
+        <!--app:fabSize="mini"-->
+        <!--app:srcCompat="@android:drawable/ic_menu_edit" />-->
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/profile_container">
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="25dp"
+        android:orientation="vertical"
+        android:weightSum="3">
 
 
-     <LinearLayout
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:paddingLeft="15dp"
-         android:paddingRight="15dp"
-         android:layout_marginTop="30dp"
-         android:orientation="vertical"
-         android:weightSum="3"
-         android:id="@+id/linearLayout"
-         android:layout_alignParentEnd="true">
-
-             <TextView
-                 android:id="@+id/profile_name"
-                 android:layout_width="match_parent"
-                 android:layout_height="0dp"
-                 android:textAlignment="center"
-                 android:layout_gravity="center|bottom"
-                 android:text="Toqa Abdel-Kadeeeeeeer"
-                 android:layout_weight="0.5"
-                 android:layout_marginTop="110dp"
-                 android:textSize="23sp" />
-
-         <android.support.v7.widget.CardView
-             android:id="@+id/profile_cardView"
-             android:layout_width="match_parent"
-             android:layout_height="0dp"
-             android:layout_weight="2.5">
-
-             <android.support.design.widget.TabLayout
-                 android:id="@+id/profile_sliding_tabs"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 app:tabMode="fixed" />
-
-             <android.support.v4.view.ViewPager
-                 android:id="@+id/profile_pager"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:padding="20dp" />
-
-         </android.support.v7.widget.CardView>
-
-     </LinearLayout>
-
-     <ImageView
-         android:id="@+id/profile_image"
-         android:layout_width="200dp"
-         android:layout_height="120dp"
-         android:elevation="10dp"
-         android:layout_marginTop="10dp"
-         app:srcCompat="@mipmap/ic_launcher_round"
-         android:layout_centerHorizontal="true" />
-
-     <android.support.design.widget.FloatingActionButton
-         android:id="@+id/profile_edit_btn"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_alignParentEnd="true"
-         android:layout_alignParentTop="true"
-         android:layout_margin="50dp"
-         android:clickable="true"
-         app:fabSize="mini"
-         app:srcCompat="@android:drawable/ic_menu_edit" />
+        <TextView
+            android:id="@+id/profile_name"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center|bottom"
+            android:layout_marginTop="110dp"
+            android:layout_weight="0.5"
+            android:text="Toqa Abdel-Kadeeeeeeer"
+            android:textAlignment="center"
+            android:textSize="23sp" />
 
 
- </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/profile_cardView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2.5"
+            android:orientation="vertical">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/profile_sliding_tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                app:tabMode="fixed" />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/profile_pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                android:padding="20dp" />
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/profile_image"
+        android:layout_width="200dp"
+        android:layout_height="120dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:elevation="10dp"
+        app:srcCompat="@mipmap/ic_launcher_round" />
+
+
+
+</RelativeLayout>
