--- a/app/src/main/res/layout/fragment_profile_data.xml
+++ b/app/src/main/res/layout/fragment_profile_data.xml
@@ -5,23 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="50dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="30dp"
+        android:paddingLeft="60dp">
 
     <TextView
         android:id="@+id/email"
         android:layout_width="87dp"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:text="Email"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_below="@+id/profile_edit_phone"
         android:layout_alignStart="@+id/phone" />
 
     <TextView
         android:id="@+id/firstname"
         android:layout_width="87dp"
-        android:layout_height="38dp"
+        android:layout_height="wrap_content"
         android:text="Firstname"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/lastname" />
@@ -29,8 +30,9 @@
     <TextView
         android:id="@+id/profile_edit_phone"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:text="01008894627"
+        android:layout_marginTop="40dp"
         android:layout_alignBaseline="@+id/phone"
         android:layout_alignBottom="@+id/phone"
         android:layout_alignStart="@+id/profile_edit_lastname" />
@@ -38,7 +40,7 @@
     <TextView
         android:id="@+id/profile_edit_email"
         android:layout_width="wrap_content"
-        android:layout_height="33dp"
+        android:layout_height="wrap_content"
         android:text="toqa.eid@gmail.com"
         android:layout_alignBaseline="@+id/email"
         android:layout_alignBottom="@+id/email"
@@ -48,7 +50,7 @@
     <TextView
         android:id="@+id/profile_edit_lastname"
         android:layout_width="wrap_content"
-        android:layout_height="33dp"
+        android:layout_height="wrap_content"
         android:text="Abdel-Kader"
         android:layout_above="@+id/phone"
         android:layout_toEndOf="@+id/firstname"/>
@@ -56,8 +58,9 @@
     <TextView
         android:id="@+id/profile_edit_firstname"
         android:layout_width="wrap_content"
-        android:layout_height="33dp"
+        android:layout_height="wrap_content"
         android:text="Toqa"
+        android:layout_marginBottom="20dp"
         android:layout_marginRight="3dp"
         android:layout_toEndOf="@+id/firstname"
         android:layout_alignParentTop="true" />
@@ -65,7 +68,7 @@
     <TextView
         android:id="@+id/phone"
         android:layout_width="87dp"
-        android:layout_height="33dp"
+        android:layout_height="wrap_content"
         android:text="Phone"
         android:layout_marginTop="32dp"
         android:layout_below="@+id/lastname"
@@ -74,7 +77,7 @@
     <TextView
         android:id="@+id/lastname"
         android:layout_width="87dp"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:text="Lastname"
         android:layout_below="@+id/profile_edit_firstname"
         android:layout_alignParentStart="true"
