--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+    </style>
+
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@color/caldroid_middle_gray</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -23,6 +28,41 @@
 
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/open_center</item>
+    </style>
+
+    <style name="CaldroidDefaultLight" parent="CaldroidDefault">
+        <item name="styleCaldroidViewLayout">@style/CaldroidDefaultLightViewLayout</item>
+        <item name="styleCaldroidGridView">@style/CaldroidDefaultLightView</item>
+        <item name="styleCaldroidWeekdayView">@style/CaldroidDefaultLightWeekView</item>
+        <item name="styleCaldroidMonthName">@style/CaldroidDefaultLightMonthName</item>
+    </style>
+
+    <style name="CaldroidDefaultLightView" parent="CaldroidDefaultGridView">
+        <item name="android:background">@color/caldroid_white</item>
+    </style>
+
+    <style name="CaldroidDefaultLightViewLayout" parent="CaldroidDefaultCalendarViewLayout">
+        <item name="android:background">@android:color/white</item>
+        <item name="android:padding">7dp</item>
+    </style>
+
+    <style name="CaldroidDefaultLightWeekView" parent="CaldroidDefaultLightWeekView">
+        <item name="android:background">@drawable/month_week_view</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">#FA8072</item>
+
+    </style>
+    <style name="CaldroidDefaultLightMonthName" parent="CaldroidDefaultMonthName">
+
+        <item name="android:textColor">@color/caldroid_middle_gray</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">28sp</item>
+        <item name="android:gravity">start</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginBottom">23dp</item>
+        <item name="android:layout_marginLeft">7dp</item>
     </style>
 
 </resources>
